--- a/style.css
+++ b/style.css
@@ -1,24 +1,34 @@
-body{ 
+body,html{
+    position: relative; 
+    margin: 0%;
+    padding: 0%;
+    height: 100%;
+    display: block;
+    overflow: hidden;
     background-image:url('background.jpg');
     background-repeat:no-repeat;
-    background-position: 50% -10%;
+    background-position-x: calc(50%);
+    background-position-y: calc(50%);
 }
 
 p{
     font-size: 48px;
-    position: relative;
+    position: absolute;
+    top: 5vh;
     left: calc(50% - 144px);
 }
 
 div{
     font-size: 48px;
-    position: relative;
+    position: absolute;
+    top: 35vh;
     left: calc(50% - 300px);
 }
 
 footer {
     font-size: .8rem;
     position: absolute;
-    bottom: 10px;
+    height: 5vh;
+    bottom: 1vh;
     left: calc(50% - 80px);
 }
